Fixed zoom out problem on mobile devices

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -157,25 +157,25 @@
     .category{
         width: 90%;
     }
+    .header{
+        gap: 10px;
+    }
     .header .title{
         text-align: center;
+        font-size: 1.5rem;
     }
     .category-img{
         width: 50%;
         height: auto;
     }
-    table{
-        font-size: 2rem;
-    }
+   
     tr{
-        height: 100px;
+        height: 50px;
     }
     .category h2{
-        font-size: 5rem;
         margin-bottom: 25px;
     }
     .cto h1{
-        font-size: 4rem;
         margin: 50px 20px 20px 20px;
     }
     .cto{
